--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp31"></a></div>
+          <div class="yokonerabe1"><a href="#dp31"><img src="dp3.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp31"><p><br>「DP3: 創造的な問題解決と説明・表現能力」</p></a>
             <p>基礎演習D「はなれつつ近づく、42の方法」（グループ制作）
               <br>「修得した知識・技能を倫理的に正しく活用しながら，社会における様々な問題を発見・分析し，創造的に解決案を設計し，それを表現し説明し，評価・改善する一連の問題解決プロセスを実行する力がある」ことを証明。</p></div>
@@ -183,7 +183,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp32"></a></div>
+          <div class="yokonerabe1"><a href="#dp32"><img src="dp3.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp32"><p><br>「DP3: 創造的な問題解決と説明・表現能力」</p></a>
             <p>木の成長と共に
             <br>「修得した知識・技能を倫理的に正しく活用しながら，社会における様々な問題を発見・分析し，創造的に解決案を設計し，それを表現し説明し，評価・改善する一連の問題解決プロセスを実行する力がある」ことを証明。</p></div>
@@ -192,7 +192,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp33"></a></div>
+          <div class="yokonerabe1"><a href="#dp33"><img src="dp3.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp33"><p><br>「DP3: 創造的な問題解決と説明・表現能力」</p></a>
             <p>応用演習　ジュエルリーフ
             <br>「修得した知識・技能を倫理的に正しく活用しながら，社会における様々な問題を発見・分析し，創造的に解決案を設計し，それを表現し説明し，評価・改善する一連の問題解決プロセスを実行する力がある」ことを証明。</p></div>
@@ -203,7 +203,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp41"><img src="CD21_G_logo.png" alt=""></a></div>
+          <div class="yokonerabe1"><a href="#dp41"><img src="dp4.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp41"><p><br>「DP4: チームで活動を進める能力」</p></a>
             <p>親子で楽しく学べる「カガクおもちゃ」の開発
               <br>「チームで問題解決に取り組む際に，内外の様々な人たちとコミュニケーションを取りながら協働し、限られたリソース（メンバーの能力，与えられた時間など）の中で目標を達成できる力がある」ことを証明。</p></div>
@@ -212,7 +212,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp42"></a></div>
+          <div class="yokonerabe1"><a href="#dp42"><img src="dp4.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp42"><p><br>「DP4: チームで活動を進める能力」</p></a>
             <p>プロジェクトでの活動
               <br>「チームで問題解決に取り組む際に，内外の様々な人たちとコミュニケーションを取りながら協働し、限られたリソース（メンバーの能力，与えられた時間など）の中で目標を達成できる力がある」ことを証明。</p></div>
@@ -221,7 +221,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp43"></a></div>
+          <div class="yokonerabe1"><a href="#dp43"><img src="dp4.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp43"><p><br>「DP4: チームで活動を進める能力」</p></a>
             <p>プロジェクトチームにインタビュー
               <br>「チームで問題解決に取り組む際に，内外の様々な人たちとコミュニケーションを取りながら協働し、限られたリソース（メンバーの能力，与えられた時間など）の中で目標を達成できる力がある」ことを証明。</p></div>
@@ -233,7 +233,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp5a"></a><img src="dp5a.jpg" alt=""></div>
+          <div class="yokonerabe1"><a href="#dp5a"></a></div>
           <div class="yokonarabe2"><a href="#dp5a"><p><br>「DP5A: 多様な視点</p></a>
             <p>課題 #07 「Unit and Scale」
             <br>多様な視点を考慮して、観察・分析・研究・制作したことを証明。</p></div>
@@ -244,7 +244,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp5b"><img src="dp5b1.jpg" alt=""></a></div>
+          <div class="yokonerabe1"><a href="#dp5b"></a></div>
           <div class="yokonarabe2"><a href="#dp5b"><p><br>「DP5B: 省察して自己学習する能力」</p></a>
             <p>親子で楽しく学べる「カガクおもちゃ」の開発
             <br>課題を遂行する中で、自分で経験したことをもとに、次の機会に活かせる具体的な「型」（パターン）を手に入れたことを証明。</p></div>
@@ -472,7 +472,7 @@
         <br>
         <p>● 参拝のプロセスを「旅」とし、ひとつの「物語」を作成した。外国人にも理解できるようにということで、イラストに拘りつつ、少ない文章量で伝える工夫をした。プロセスの説明のため、今回は意味などは記さず、自身が行う行動のみを記し、簡潔な図解を行った。ひとつの「物語」であることを意識させるため、一〜五の数字で順番を表し、それを矢印で繋げることによって、ひとつの流れであることをイメージしやすくさせた。その際の数字を漢数字にしたことに関しては、日本らしさが出ると考えた結果である。　(234字)</p>
         <br>
-        <a href="dp2cb.pdf"><img src="DP2Cb.jpg" alt=""></a>
+        <a href="dp2cb.pdf"><img src="dp2cb.jpg" alt=""></a>
         <br>
       </span>
     </div>
@@ -490,7 +490,7 @@
         <br>
         <p>● 日本の食品自給率の低さを問題に掲げ、「まぜまぜ〜る」というお菓子を提案した。お菓子自体が円グラフになっており、それを混ぜた時の色の濃さでその食品に対する自給率がひと目でわかるというものである。日本の食品自給率はとても低いのが現状である。それに関心を持ちやすくするための工夫として、自分の手で「混ぜる」という行為によって、目で確かめられるお菓子を考えた。パッケージやデザインにも拘り、さらに分かりやすくするために、「国産のものを食べて日本を応援しよう！！」というメッセージを添えてある。　(242字)</p>
         <br>
-  　　　 <a href="dp2cc.pdf"><img src="DP2Cc.jpg" alt=""></a>
+  　　　 <a href="dp2cc.pdf"><img src="dp2cc.jpg" alt=""></a>
         <br>
       </span>
     </div>
@@ -524,7 +524,7 @@
         <br>
         <p>● 共同プロジェクトとして株式会社シンクハピネスさんと共に行ってきた活動をまとめたポスター制作を行った。枠にとらわれずに、自由な発想で行ってきたことから、四角いポスターではなく、有機的な形で各項目ごとにまとめて制作を行った。また、回を重ねるごとに木が成長していく様子が描かれている。これは、私たち自身が活動を進めていく上で、以前より良い活動に進んでいけたことを表現している。つまり、「ケア」という難しい部分をデザインを通じて可視化を行った。　(218字)</p>
         <br>
-        <img src="DP32.jpeg" alt=""></a>
+        <img src="dp32.jpeg" alt=""></a>
         <br>
       </span>
     </div>
@@ -608,7 +608,7 @@
         <br>
         <p>● 私はバスケットボールをテーマとし、この課題に取り組んだ。多様な視点からの数字に着目することがこの課題の主旨であることから、なるべく違う数字の単位のスケールの違いを示すことを心がけた。バスケットボールに関して言えば、ボールだけで大きさ、直径、重量の3つの数字のスケールを発見することができた。着色は自由であったが、よりバスケットボールをイメージしやすくなる最低限の着色を行った。多様な視点からバスケットボールの図解をすることができたと考える。　(220字)</p>
         <br>
-        <a href="dp5a.pdf"><img src="DP5A.jpg" alt=""></a>
+        <a href="dp5a.pdf"><img src="dp5a.jpg" alt=""></a>
         <br>
       </span>
     </div>
@@ -625,8 +625,8 @@
         <br>
         <p>● グループ課題であり、私たちは「ジュエルリーフ」という葉っぱについて学ぶことができるおもちゃの制作を行った。葉っぱの中でも細かくすると、葉っぱが重ならないようにくっついていること、難しい言い方をするとフィボナッチ数列について学んでもらうためのおもちゃである。最初からこれについて進めていくと決まったわけではなく、とても難航した。しかし、その際に学んだことはなんでも試してみることである。なんでもとりあえず購入して試してみることで私たちは最終的に親子に喜んでもらい、かつ学びを得ることができるおもちゃを作ることができた。　(258字)</p>
         <br>
-        <a href="dp5b1.pdf"><img src="DP5b1.jpg" alt=""></a>
-        <a href="dp5b2.pdf"><img src="DP5b2.jpg" alt=""></a>
+        <a href="dp5b1.pdf"><img src="dp5b1.jpg" alt=""></a>
+        <a href="dp5b2.pdf"><img src="dp5b2.jpg" alt=""></a>
         <br>
       </span>
     </div>
