--- a/index.html
+++ b/index.html
@@ -262,7 +262,33 @@
       </div>
     </div>
 
-    <h2>レビューに対する回答と更新履歴</h2>
+    <br>
+    <h2>-----</h2>
+    <br>
+    <div class="centering_parent">
+      <span class="centering_item">
+        <h2>-----</h2>
+        <h2>レビューに対する回答と更新履歴</h2>
+        <h2>第一期レビュー</h2>
+        <p>・DP1の自分メディア史以外、DP2AaとDP2Adのリンクが機能していません。DP1のメディア史、DP2Abが写真からしかページに飛ぶことができません。</p>
+        <p>　→　全ての内容をひとつのページにまとめ、見出しからリンクに飛べるように変更しました。　（修正済み　7/10）</p>
+        <br>
+        <p>・GitHubで作られている一部のページを開くことができません。（DP1,DP2など）</p>
+        <p>　→　全ての内容をひとつのページにまとめ、見出しからリンクに飛べるように変更しました。　（修正済み　7/10）</p>
+        <br>
+        <p>・1のあたりで専用サイトが表示されないです</p>
+        <p>　→　全ての内容をひとつのページにまとめ、見出しからリンクに飛べるように変更しました。　（修正済み　7/10）</p>
+        <br>
+        <p>・アイコンを入れた方がより見やすいと思いました！</p>
+        <h2>第二期レビュー</h2>
+        <p>・DP2B｜情報ツールを扱うスキルが3つ全て同じページに飛んでしまいます</p>
+        <p>　→　それぞれのリンクに飛ぶように変更しました。　(修正済み　7/24)
+        <h2>-----</h2>
+      </span>
+    </div>
+    <br>
+    <h2>-----</h2>
+    <br>
 
     <div class="centering_parent">
       <span class="centering_item">
