--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp5a"></a></div>
+          <div class="yokonerabe1"><a href="#dp5a"><img src="dp5a.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp5a"><p><br>「DP5A: 多様な視点</p></a>
             <p>課題 #07 「Unit and Scale」
             <br>多様な視点を考慮して、観察・分析・研究・制作したことを証明。</p></div>
@@ -244,7 +244,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp5b"></a></div>
+          <div class="yokonerabe1"><a href="#dp5b"><img src="dp5b.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp5b"><p><br>「DP5B: 省察して自己学習する能力」</p></a>
             <p>親子で楽しく学べる「カガクおもちゃ」の開発
             <br>課題を遂行する中で、自分で経験したことをもとに、次の機会に活かせる具体的な「型」（パターン）を手に入れたことを証明。</p></div>
@@ -253,7 +253,7 @@
 
       <div class="content fadeUpTrigger">
         <div class="yokonarabe">
-          <div class="yokonerabe1"><a href="#dp5bb"></a></div>
+          <div class="yokonerabe1"><a href="#dp5bb"><img src="dp5b.png" alt=""></a></div>
           <div class="yokonarabe2"><a href="#dp5bb"><p><br>「DP5B: 省察して自己学習する能力」</p></a>
             <p>英語学習
             <br>「自分の英語力に関する自己評価」 「自分の英語の学び方の〈これまで〉と〈これから〉」</p>
