--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <p>　→　全ての内容をひとつのページにまとめ、見出しからリンクに飛べるように変更しました。　（修正済み　7/10）</p>
         <br>
         <p>・アイコンを入れた方がより見やすいと思いました！</p>
-        <p>　→　全てにアイコンを入れました。
+        <p>　→　全てにアイコンを入れました。　（修正済み　7/10）
         <h2>第二期レビュー</h2>
         <p>・DP2B｜情報ツールを扱うスキルが3つ全て同じページに飛んでしまいます</p>
         <p>　→　それぞれのリンクに飛ぶように変更しました。　(修正済み　7/24)
